  Changes:
    - Upped Factorio version required (due to bugfixes in the base game I had previously hacked around)
    - Removed said "hacking around" as the underlying bugs are now fixed!
  Bugfixes:
    - Building outputs can no longer sideload onto pre-existing belts, they will simply fail to snap
    - Build Gun collision check now uses real built-in range check instead of re-creating it
    - Mineral deposits (and Huge Rocks) no longer spawn on resource nodes if disabled
    - "Behemoth Worm" (aka indestructible poison gas rocks) no longer spawn if mineral deposits are disabled
---------------------------------------------------------------------------------------------------
Version: 0.4.4
Date: 2021.01.29
  Bugfixes:
    - The Build Gun no longer siphons items from your inventory when building power poles by dragging
    - Build Gun GUI was updating too often under some circumstances
    - Build Gun GUI wasn't updating often enough under other circumstances!
    - Mining an item while holding a ghost now recalculates whether you can afford it.
---------------------------------------------------------------------------------------------------
Version: 0.5.0
Date: 2021.01.30
  Info:
    - Release Candidate 1!
  Changes:
    - Added IO markers to all placeholder graphics for easier planning/visualisation
  Bugfixes:
    - The Build Gun was still broken, of course.
---------------------------------------------------------------------------------------------------
Version: 0.5.1
Date: 2021.01.31
  Bugfixes:
    - Recipe browser crashed when another mod added a tech with no cost
    - Typos in localisation
    - Game crash when placing an underground belt directly next to an input/output
    - To-do list did not properly decrement when placing certain entities
---------------------------------------------------------------------------------------------------
Version: 0.6.0
Date: ????
  Changes:
    - Coal, Fuel and Nuclear generators are now simpler entities