@@ -8,7 +8,7 @@
 	"factorio_version": "1.1",
 	"dependencies":
 	[
-		"base >= 1.1.18",
+		"base >= 1.1.34",
 		"?Factorissimo2 >= 2.4.2"
 	]
 }
